syntax = "proto3";

package NetGrpcSentryTest.Service;

message Request {
	string message = 1;
}

message Response {
	string message = 1;
}

service TestService {
	rpc Unary(Request) returns (Response) {}
	rpc ServerStream(Request) returns (stream Response) {}
	rpc ClientStream(stream Request) returns (Response) {}
	rpc DuplexStream(stream Request) returns (stream Response) {}
}